Add google fonts and change card heading colors.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   background: url("enroute.jpg") no-repeat center center/cover;
+  font-family: "Courier Prime", monospace;
 }
 
 .jumbotron,
